<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The RomSwitcher Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name">RomSwitcher</string>

    <!-- Start -->
    <string name="nosupport">No support for your device!\nBlame Grarak</string>
    <string name="ok">OK</string>
    <string name="newkernel">New kernel detected</string>
    <string name="setupnewkernel">Seting up new kernel</string>

    <!-- Main Setup -->
    <string name="text_welcome">Welcome</string>
    <string name="text_guidance">Thank you for using RomSwitcher\nPress \"Next\" for setup\nor \"Cancel\" to abort</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="nobusybox">Busybox is not installed</string>
    <string name="noroot">No Root access</string>
    <string name="setuprs">Setting up RomSwitcher</string>
    <string name="somethingwrong">Something went wrong</string>

    <!-- Set Name -->
    <string name="firstrom">First rom</string>
    <string name="secondrom">Second rom</string>
    <string name="setname_first">Name of first rom</string>
    <string name="setname_second">Name of second rom</string>
    <string name="emptynames">Names are empty</string>

    <!-- Features -->
    <string name="features">Features of RomSwitcher</string>
    <string name="sharing">Sharing</string>
    <string name="appsharing">App Sharing</string>
    <string name="datasharing">Data Sharing</string>
    <string name="appsharing_summary">Enable App Sharing between 1st and 2nd rom</string>
    <string name="datasharing_summary">Enable Data Sharing between 1st and 2nd rom</string>
    <string name="privacy">Privacy</string>
    <string name="password">Password</string>
    <string name="password_summay">Protect your roms with a password</string>
    <string name="setuppass">Setup a password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="oldpasswrong">Old password is wrong</string>
    <string name="newnotmatch">Password does not match</string>
    <string name="emptypass">Password is empty</string>
    <string name="nopassword">Setup a password please</string>

    <!-- Check Files -->
    <string name="more">More</string>
    <string name="yes">Yes</string>
    <string name="getfirstimg">Grab first.img from your device</string>
    <string name="nofirstimg">first.img does not exist\nPlease extract boot.img from your 1st rom, rename it to first.img and move to romswitcher folder</string>
    <string name="passwordwrong">Password is wrong</string>
    <string name="kernelinstalled">Kernel has been installed\nReboot now?</string>

    <!-- Connection -->
    <string name="checkconnection">Checking connection</string>
    <string name="nointernet">No internet connection</string>
    <string name="serverdown">Server is down</string>
    <string name="openagain">Open RomSwitcher again when the download finished</string>

    <!-- More Settings -->
    <string name="general">General</string>
    <string name="wipeoptions">Wipe Options</string>
    <string name="settings">Settings</string>
    <string name="aboutus">About us</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- General -->
    <string name="thirdrom">Third rom</string>
    <string name="setname_third">Name of third rom</string>
    <string name="fourthrom">Fourth rom</string>
    <string name="setname_fourth">Name of fourth rom</string>
    <string name="fifthrom">Fifth rom</string>
    <string name="setname_fifth">Name of fifth rom</string>
    <string name="setname">Set name</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="rebootrecovery">Reboot to RomSwitcher Recovery</string>
    <string name="rebootrecovery_summary">This will not override your current recovery</string>
    <string name="installrecovery">Install RomSwitcher Recovery</string>
    <string name="installrecovery_summary">Use RomSwitcher Recovery as default</string>
    <string name="recoveryinstalled">Recovery has been installed</string>

    <!-- Wipe Options -->
    <string name="remove2ndrom">Remove 2nd rom</string>
    <string name="remove3rdrom">Remove 3rd rom</string>
    <string name="factoryreset">Factory reset</string>
    <string name="wipecache">Wipe cache</string>
    <string name="wipedalvik">Wipe dalvik-cache</string>
    <string name="wipebattery">Wipe battery stats</string>
    <string name="areyousure">Are you sure?\n\nI am not responsible if your device get bricked!</string>
    <string name="confirm">Confirm</string>

    <!-- Settings -->
    <string name="update">Update</string>
    <string name="ota">Receive OTA-Updates</string>
    <string name="ota_summary">On every reboot the app will check for new updates\nNo service will run in background</string>

    <!-- About us -->
    <string name="members">Team members</string>

    <!-- OTA -->
    <string name="updateavaible">Update is avaible</string>
    <string name="updatefinish">Please open RomSwitcher App! It will download required files again</string>

</resources>