<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 The RomSwitcher Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/red_light"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="" />

        <Button
            android:id="@+id/button_next_features"
            style="@style/ButtonTheme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/button_next" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/appsharing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/appsharing" />

    <CheckBox
        android:id="@+id/datasharing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/appsharing"
        android:layout_below="@+id/appsharing"
        android:layout_marginTop="10dp"
        android:text="@string/datasharing" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/appsharing"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/sharing"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/datasharing"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/datasharing"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/datasharing"
        android:text="@string/datasharing_summary"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/datasharing"
        android:layout_marginTop="10dp"
        android:text="@string/privacy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        style="@style/TextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/features"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/appsharing"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/appsharing"
        android:text="@string/appsharing_summary"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/check_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/datasharing"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="10dp"
        android:text="@string/password" />

    <Button
        android:id="@+id/setup_password"
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:text="@string/setuppass" />

    <TextView
        style="@style/TextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/check_password"
        android:layout_alignBottom="@+id/check_password"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/password_summay"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>